Has been positioned elements in contact section and footer, observed an issue with wrapping articles in chefs section

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,9 @@
 }   
 
 /* Base */
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 body {
@@ -55,6 +57,7 @@ body {
 h1, h2, h3, h4, h5, h6, p {
     margin-top: 0;
 }
+
 address {
     font-style: normal;
 
@@ -228,33 +231,48 @@ ul {
 } 
 .chefs-section-title {
     margin: 96px auto 80px;
-    max-width: 520px;
+    max-width: 532px;
 }
-
+.chefs-section-title::before ,
+.chefs-section-title::after {
+    display: block;
+    width: 352px;
+    border: 2px solid var(--secondary-color-light);
+    content: '';
+}
 .section-title-chef {
     font-size: 40px;
     font-weight: 600;
     margin: 0 0 16px 0;
 }
+
+
 .chefs-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.chefs-list-item {
-    display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
     
 }
-.chef-list-item-text {
-    
-    max-width: 334px;
+.chef-item {
+    flex-basis: calc(100% - 30px / 2);
+    gap: 40px 30px;
+
 }
-.chefs-list-item {
+.chef-card {
     display: flex;
     gap: 30px;
+    
 }
-
+.chef-card-content {
+    max-width: 334px;
+}
+.chef-text p {
+    margin-bottom: 30px;
+}
+.chef-text p:last-child {
+    margin-bottom: 0;
+}
 
 /* Formats section */
 .formats-list{
@@ -287,6 +305,12 @@ ul {
     font-size: 14px;
 }
 /* Carousel */
+.formats-carousel {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    
+}
 .carousel-button{
     display: flex;
     justify-content: center;
@@ -299,6 +323,8 @@ ul {
     border-radius: 50%;
     cursor: pointer;
     fill: var(--primary-color);
+    flex-shrink: 0;
+
 }
 
 .carousel-button:hover{
@@ -306,6 +332,32 @@ ul {
     fill: var(--primary-color-second);
 }
 
+/* Contact section */
+.contact-section{
+    padding-bottom: 96px;
+}
+.contact-form {
+    flex-basis: 605px;
+    flex-shrink: 0;
+}
+.contact-title {
+    font-weight: 900;
+    font-size: 63px;
+    line-height: 1.3;
+}
+.contact-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.contact-map {  
+    flex-shrink: 0;    
+    border-radius: 16px;
+    border: none;
+}
 
 
 /* Footer */
@@ -315,7 +367,30 @@ ul {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding: 32px 0;
 }
+.footer-container {
+    display: flex;
+    flex-grow: 50%;
+    justify-content: space-between;
+    gap: 20px;
+}
+.footer-nav,
+.footer-address {
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
+.footer-nav a, ul, .footer-logo {
+    flex-grow: 1;
+}
+.footer-address ul, .address-info {
+    flex-grow: 1;
+}
+
+
+
+/* Address */
 .address-link a {
     color: var(--primary-color-second);
     font-weight: 300;
